# ame2020-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: convert_to_json.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: all.rs  deserialize.rs  serialize.rs
src/: error.rs  lib.rs  tests.rs
src/tests/: extra_headers  multi  no_preamble  non_utf8  only_preamble  only_preamble_and_headers  parse_float_error_1  parse_float_error_2  parse_int_error_1  parse_int_error_2  parse_int_error_3  pre_preamble  single  str_index_1  str_index_2  too_many_page_feeds  too_short_line
